GNOME Bugzilla – Bug 782042
qtdemux: Fix crash on mss stream caused by invalid stsd entry access
Last modified: 2017-05-08 16:25:39 UTC
Since mss has no moov, default stsd entry should be created with media-caps.
Created attachment 350838 [details] [review] qtdemux: Fix crash on mss stream caused by invalid stsd entry access I guess this crash can be reproduced with any mss manifest. Or please use following manifest. http://playready.directtaps.net/smoothstreaming/TTLSS720VC1/To_The_Limit_720.ism/Manifest
We should get this in. Patch looks ok
Attachment 350838 [details] pushed as 66448be - qtdemux: Fix crash on mss stream caused by invalid stsd entry access