qtdemux: Fix crash on mss stream caused by invalid stsd entry access

Since mss has no moov, default stsd entry should be created with media-caps.

https://bugzilla.gnome.org/show_bug.cgi?id=782042